# lmml

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
crates/lmml-api/: Cargo.toml
crates/lmml-api/src/: lib.rs
crates/lmml-build/: Cargo.toml
crates/lmml-build/src/: lib.rs
crates/lmml-compat/: Cargo.toml
crates/lmml-compat/src/: lib.rs
crates/lmml-detect/: Cargo.toml
crates/lmml-detect/src/: gpu_catalog.rs  lib.rs
crates/lmml-models/: Cargo.toml
crates/lmml-models/src/: catalog.rs  lib.rs
crates/lmml-models/tests/: download_integration.rs
crates/lmml-node/: Cargo.toml
crates/lmml-node/src/: advertise.rs  lib.rs  main.rs
crates/lmml-router/: Cargo.toml
crates/lmml-router/src/: discovery.rs  lib.rs  main.rs
crates/lmml-router/tests/: node_router_chain.rs
crates/lmml-server/: Cargo.toml
crates/lmml-server/src/: lib.rs
crates/lmml-server/tests/: server_lifecycle.rs
crates/lmml-state/: Cargo.toml
crates/lmml-state/src/: lib.rs
crates/lmml-tui/: Cargo.toml
crates/lmml-tui/src/: action.rs  app.rs  event_loop.rs  footer.rs  lib.rs  main.rs  runtime_cli.rs
crates/lmml-tui/src/app/: settings_state.rs
crates/lmml-tui/src/tabs/: build.rs  detect.rs  mod.rs  models.rs  server.rs  settings.rs
crates/lmml-tui/src/tabs/snapshots/: lmml_tui__tabs__tests__build_complete.snap  lmml_tui__tabs__tests__build_failed.snap  lmml_tui__tabs__tests__build_failed_update_available.snap  lmml_tui__tabs__tests__build_idle.snap  lmml_tui__tabs__tests__build_running.snap  lmml_tui__tabs__tests__build_sccache_active.snap  lmml_tui__tabs__tests__build_update_available.snap  lmml_tui__tabs__tests__detect_complete_all_green.snap  lmml_tui__tabs__tests__detect_cuda_warning.snap  lmml_tui__tabs__tests__detect_fresh.snap  lmml_tui__tabs__tests__detect_missing_prereqs.snap  lmml_tui__tabs__tests__detect_probing.snap  lmml_tui__tabs__tests__first_run_onboarding.snap  lmml_tui__tabs__tests__first_run_onboarding_backend.snap  lmml_tui__tabs__tests__first_run_onboarding_done.snap  lmml_tui__tabs__tests__first_run_onboarding_hardware.snap  lmml_tui__tabs__tests__first_run_onboarding_models_dir.snap  lmml_tui__tabs__tests__first_run_onboarding_scan.snap  lmml_tui__tabs__tests__first_run_onboarding_scan_running.snap  lmml_tui__tabs__tests__first_run_onboarding_server_port.snap  lmml_tui__tabs__tests__first_run_onboarding_starter_model.snap  lmml_tui__tabs__tests__help_overlay.snap  lmml_tui__tabs__tests__models_empty.snap  lmml_tui__tabs__tests__models_hf_downloading.snap  lmml_tui__tabs__tests__models_hf_search_open.snap  lmml_tui__tabs__tests__models_known_family_details.snap  lmml_tui__tabs__tests__models_populated.snap  lmml_tui__tabs__tests__models_vram_fit_badges.snap  lmml_tui__tabs__tests__server_failed.snap  lmml_tui__tabs__tests__server_failed_port_conflict.snap  lmml_tui__tabs__tests__server_ready.snap  lmml_tui__tabs__tests__server_starting.snap  lmml_tui__tabs__tests__server_stopped.snap  lmml_tui__tabs__tests__settings_default.snap  lmml_tui__tabs__tests__settings_invalid_inline_error.snap  lmml_tui__tabs__tests__settings_modal_unsupported_flags.snap
crates/lmml-tui/src/widgets/: help_overlay.rs  mod.rs  onboarding.rs
crates/lmml-tui/tests/: e2e_smoke.rs  runtime_cli.rs
docs/: agentq-lmml-integration-plan.md  hardware-gpu-support.md  how-to-use.md  lan-client-install.md  learnings.md  llama-server-integration-contract.md  llm-model-support.md  lmml-fleet-profiles.md  lmml-integration-contract.md  lmml-packaging-prompt.md  lmml-plan.md  milestones-report.md  opencode-1200-evidence.md  plan.md  release-checklist.md  runtime-harness-plan.md  todo.md  training-how-to-use.md
scripts/: install.sh  lmml-lan-server  package-release.sh  preflight.sh  uninstall.sh
src/: main.rs
src/app/: config.rs  errors.rs  mod.rs  state.rs
src/models/: download.rs  local.rs  mod.rs  types.rs
src/probe/: blas.rs  cmake.rs  cpu.rs  cuda.rs  metal.rs  mod.rs  os.rs  rocm.rs  vulkan.rs
src/server/: config.rs  mod.rs  process.rs
src/tui/: build.rs  dashboard.rs  helpers.rs  mod.rs  models.rs  server.rs  settings.rs
src/tui/widgets/: help_bar.rs  log_viewer.rs  mod.rs  model_card.rs  progress_bar.rs  status_badge.rs
tests/integration/: clean_install.sh  preflight.sh  script_syntax.sh  signed_checksums.sh
