[workspace]
members = [
    "crates/lmml-api",
    "crates/lmml-node",
    "crates/lmml-router",
    "crates/lmml-detect",
    "crates/lmml-compat",
    "crates/lmml-build",
    "crates/lmml-models",
    "crates/lmml-server",
    "crates/lmml-state",
    "crates/lmml-tui",
]
default-members = ["crates/lmml-tui"]
resolver = "2"
