[package]
name = "lmml-build"
version = "0.1.0"
edition = "2021"
description = "llama.cpp build management for lmml"

[dependencies]
lmml-detect = { path = "../lmml-detect" }
libc = "0.2"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
