[package]
name = "lmml-compat"
version = "0.1.0"
edition = "2021"
description = "llama.cpp server compatibility layer for lmml"
license = "Apache-2.0"
repository = "https://github.com/soulhash-labs/lmml"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["process", "rt", "macros"] }
tracing = "0.1"
