[package]
name = "lmml-detect"
version = "0.1.0"
edition = "2021"
description = "Hardware and prerequisite detection for lmml"

[dependencies]
libc = "0.2"
sysinfo = "0.33"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
