[package]
name = "lmml-models"
version = "0.1.0"
edition = "2021"
description = "GGUF model registry and metadata management for lmml"
license = "Apache-2.0"
repository = "https://github.com/soulhash-labs/lmml"

[dependencies]
lmml-detect = { path = "../lmml-detect" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
