[package]
name = "lmml-router"
version = "0.1.0"
edition = "2021"
description = "LAN router and load balancer for LMML node APIs"
license = "Apache-2.0"
repository = "https://github.com/soulhash-labs/lmml"

[lib]
name = "lmml_router"
path = "src/lib.rs"

[[bin]]
name = "lmml-router"
path = "src/main.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
lmml-api = { path = "../lmml-api" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
