[package]
name = "lmml-server"
version = "0.1.0"
edition = "2021"
description = "llama-server lifecycle management for lmml"

[dependencies]
libc = "0.2"
lmml-compat = { path = "../lmml-compat" }
lmml-models = { path = "../lmml-models" }
reqwest = "0.12"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }

[dev-dependencies]
pretty_assertions = "1"
