[package]
name = "lmml-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI binary for lmml"

[dependencies]
crossterm = "0.28"
lmml-build = { path = "../lmml-build" }
lmml-detect = { path = "../lmml-detect" }
lmml-state = { path = "../lmml-state" }
ratatui = "0.29"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
