[package]
name = "lmml-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI binary for lmml"

[lib]
name = "lmml_tui"
path = "src/lib.rs"

[[bin]]
name = "lmml"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
lmml-build = { path = "../lmml-build" }
lmml-compat = { path = "../lmml-compat" }
lmml-detect = { path = "../lmml-detect" }
lmml-models = { path = "../lmml-models" }
lmml-server = { path = "../lmml-server" }
lmml-state = { path = "../lmml-state" }
ratatui = "0.29"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = "1"
tempfile = "3"
